--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,8 @@
 /* CUSTOM PROPERTIES */
 /*******************/
 :root {
-  --color-text: rgb(21, 22, 20);
-  --color-background: rgb(235, 255, 241);
+  --color-text: #161715;
+  --color-background: #f7f7f7;
 }
 
 /*********/
