--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@
 @font-face {
   font-family: "PP-Mori-Regular";
   src: url("/font/PPMori-Regular.b106d8fe.woff2") format("woff2");
-}format("woff2")
+}
 
 @font-face {
   font-family: "PP-Mori-Light";
