--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,6 @@ body {
   margin: 0;
   background: var(--color-background);
   overflow-x: hidden;
-  padding: 0;
 }
 
 /**************/ 
@@ -45,13 +44,13 @@ h1 {
   text-align: left;
 }
 
-h2, h3, h4, a, li {
+h2, h3, a, li {
   font-family: "PP-Mori-Regular";
   font-size: clamp(1.5em, 3vw + 1em, 2.5em); /* Responsive font size */
   margin-bottom: 0.5em;
 }
 
-p, button {
+h4, p, button {
   font-family: "PP-Mori-Light";
   font-size: clamp(0.9em, 2vw + 0.5em, 1.2em); /* Responsive font size */
   line-height: 1.6;
@@ -774,23 +773,30 @@ section {
   border-radius: 8px; /* Rounded corners for items */
   display: flex; /* Use flex to align items vertically */
   flex-direction: column; /* Stack items vertically */
-  align-items: center; /* Center items horizontally */
-  font-size: 0.9em;
+  align-items: left; /* Center items horizontally */
+  font-size: 1em;
+  background-color: white;
+  border-radius: 20px;
+  padding: 1em;
 }
 
 .team-list li p {
   font-size: 1.5em;
+  padding: 1em;
 }
 
 .team-list li a {
   font-size: 1.5em;
+  color: var(--color-text);
+  padding: 1em;
 }
 
 /* Style for images or GIFs */
 .team-list li img {
-  max-height: 5em; /* Maximum height of the image */
-  width: auto; /* Maintain aspect ratio */
+  max-width: 10em;
   margin-bottom: 0.5em; /* Space below the image */
+  border-radius: 50%;
+  padding: 1em;
 }
 
 /* Responsive styles for larger screens */
