--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,10 @@
-/*******************/
-/* CUSTOM PROPERTIES */
-/*******************/
+/*********************************************************** CUSTOM PROPERTIES */
 :root {
   --color-text: #161715;
   --color-background: #f7f7f7;
 }
 
-/*********/
-/* FONTS */
-/*********/
+/*********************************************************** FONTS */
 @font-face {
   font-family: "PP-Mori-Regular";
   src: url("/font/PPMori-Regular.b106d8fe.woff2") format("woff2");
@@ -19,9 +15,7 @@
   src: url("/font/PPMori-Light.0f42b11c.woff2") format("woff2");
 }
 
-/**************/ 
-/* CSS REMEDY */
-/**************/
+/*********************************************************** CSS REMEDY */
 *,
 *::after,
 *::before {
@@ -35,18 +29,29 @@ body {
   overflow-x: hidden;
 }
 
-/**************/ 
-/* TYPOGRAPHY */
-/**************/
-h1, h2, h3, a, li, h4, p, button {
+/*********************************************************** TYPOGRAPHY */
+h1,
+h2,
+h3,
+a,
+li,
+h4,
+p,
+button {
   margin-bottom: 0.5em;
 }
 
-h1, h4, p, button {
+h1,
+h4,
+p,
+button {
   font-family: "PP-Mori-Light";
 }
 
-h2, h3, a, li {
+h2,
+h3,
+a,
+li {
   font-family: "PP-Mori-Regular";
 }
 
@@ -55,18 +60,21 @@ h1 {
   text-align: left;
 }
 
-h2, h3, a, li {
+h2,
+h3,
+a,
+li {
   font-size: clamp(1.5em, 3vw + 1em, 2.5em);
 }
 
-h4, p, button {
+h4,
+p,
+button {
   font-size: clamp(0.9em, 2vw + 0.5em, 1.2em);
   line-height: 1.6;
 }
 
-/****************/
-/* LOGO STYLING */
-/****************/
+/*********************************************************** LOGO STYLING */
 #logo {
   position: fixed;
   top: 1em;
@@ -78,9 +86,7 @@ h4, p, button {
   width: 6em;
 }
 
-/******************/
-/* HAMBURGER MENU */
-/******************/
+/*********************************************************** HAMBURGER MENU */
 .hamburger {
   position: fixed;
   top: 10px;
@@ -115,9 +121,7 @@ h4, p, button {
   display: none;
 }
 
-/***********************/
-/* HAMBURGER ANIMATION */
-/***********************/
+/*********************************************************** HAMBURGER ANIMATION */
 #toggle:checked + .hamburger .unchecked {
   opacity: 0;
 }
@@ -126,9 +130,7 @@ h4, p, button {
   opacity: 1;
 }
 
-/****************/
-/* MENU STYLING */
-/****************/
+/*********************************************************** MENU STYLING */
 .nav {
   position: fixed;
   top: 0;
@@ -141,7 +143,6 @@ h4, p, button {
   transition: height 0.3s ease-in-out;
   display: grid; /* Use grid for layout */
   grid-template-rows: repeat(3, auto); /* Allow three rows for links */
-  place-items: left; /* Center items horizontally */
 }
 
 .nav li {
@@ -165,9 +166,7 @@ h4, p, button {
   opacity: 0.9; /* Fade in items */
 }
 
-/*******************************************/
-/* HOVER EFFECT WITH WHITE LINE UNDER LINK */
-/*******************************************/
+/*********************************************************** HOVER EFFECT WITH WHITE LINE UNDER LINK */
 nav a {
   position: relative;
   display: inline-block;
@@ -187,10 +186,9 @@ nav a:hover::after {
   width: 100%;
 }
 
-/************************/
-/* MAIN CONTENT STYLING */
-/************************/
-main, section {
+/*********************************************************** MAIN CONTENT STYLING */
+main,
+section {
   display: grid;
   gap: 2em;
   margin: 0 auto;
@@ -218,17 +216,22 @@ footer button {
   background-color: var(--color-background);
   border: none;
   display: grid;
-  place-items: left;
+}
+
+footer button:not(:first-child) {
+  transform: rotate(180deg);
 }
 
 /* Responsive layout */
-@media (min-width: 48em) { /* Medium screens and up */
+@media (min-width: 48em) {
+  /* Medium screens and up */
   .main-header button {
     margin-right: auto;
   }
 }
 
-@media (min-width: 64em) { /* Large screens */
+@media (min-width: 64em) {
+  /* Large screens */
   .main-header {
     flex-direction: column;
     align-items: center;
@@ -236,9 +239,7 @@ footer button {
   }
 }
 
-/*****************/
-/* VIDEO STYLING */
-/*****************/
+/*********************************************************** VIDEO STYLING */
 video {
   top: 0;
   left: 0;
@@ -251,9 +252,7 @@ video {
   position: relative;
 }
 
-/***************/
-/* GRID LAYOUT */
-/***************/
+/*********************************************************** GRID LAYOUT */
 article {
   background-color: var(--color-background);
   display: flex;
@@ -291,9 +290,7 @@ article {
   }
 }
 
-/*******************/
-/* INDUSTRIES SECTION STYLING */
-/*******************/
+/*********************************************************** INDUSTRIES SECTION STYLING */
 .industries {
   display: flex;
   flex-direction: column;
@@ -340,9 +337,7 @@ article {
   }
 }
 
-/*******************/
-/* LIST STYLING */
-/*******************/
+/*********************************************************** LIST STYLING */
 .industries-list {
   padding: 0;
   list-style-type: none;
@@ -365,10 +360,7 @@ article {
   }
 }
 
-
-/*******************/
-/* BRANDS SECTION STYLING */
-/*******************/
+/*********************************************************** BRANDS SECTION STYLING */
 .brands {
   padding: 2em 0;
 }
@@ -385,9 +377,7 @@ article {
   display: block;
 }
 
-/************/
-/* Carousel */
-/************/
+/*********************************************************** Carousel */
 .carousel-wrapper {
   position: relative;
   overflow: hidden; /* Hide overflow to ensure no content spills out */
@@ -475,9 +465,7 @@ article {
   }
 }
 
-/********/
-/* Awards */
-/********/
+/*********************************************************** Awards */
 .awards-section {
   display: grid; /* Use grid layout for the section */
   grid-template-columns: 1fr; /* One column by default */
@@ -533,9 +521,7 @@ article {
   }
 }
 
-/*************/
-/* Recent Work */
-/*************/
+/*********************************************************** Recent Work */
 ol {
   list-style-type: none; /* Remove default list style */
   display: grid; /* Use grid for the layout */
@@ -582,28 +568,27 @@ ol li p {
 }
 
 /* Button styling */
-#viewButton, #sayButton {
-  height: 4.24em; 
+#viewButton,
+#sayButton {
+  height: 4.24em;
   line-height: calc(4.25em - 4px + 0.125em);
-  border-radius: 2.125em; 
+  border-radius: 2.125em;
   padding-left: 2.5em; /* Padding left */
   padding-right: 2.5em; /* Padding right */
-  font-weight: 400; 
+  font-weight: 400;
   display: flex; /* Use flexbox to align text and svg */
   align-items: center; /* Vertically center the text and SVG */
   justify-content: center; /* Center content horizontally */
   gap: 0.5em; /* Space between text and SVG */
   box-sizing: border-box; /* Include padding in width */
-  border: 2px solid var(--color-text); 
-  background-color: var(--color-text); 
-  color: var(--color-background); 
+  border: 2px solid var(--color-text);
+  background-color: var(--color-text);
+  color: var(--color-background);
   width: auto; /* Button width */
   overflow: hidden; /* Ensures content doesn’t overflow */
 }
 
-/*************/
-/* How We Work */
-/*************/
+/*********************************************************** How We Work */
 .stacked-items {
   list-style: none; /* Remove default list numbering */
   padding: 0; /* Remove padding */
@@ -646,9 +631,7 @@ ol li p {
   }
 }
 
-/**********/
-/* LinkedIn */
-/**********/
+/*********************************************************** Social media */
 section {
   padding: 2em 0; /* Vertical padding */
 }
@@ -686,15 +669,13 @@ section {
 }
 
 /* Responsive styles for larger screens */
-@media (min-width: 64em) { 
+@media (min-width: 64em) {
   .team-list {
-      grid-template-columns: repeat(3, 1fr); /* Three columns layout */
+    grid-template-columns: repeat(3, 1fr); /* Three columns layout */
   }
 }
 
-/**********/
-/* Footer */
-/**********/
+/*********************************************************** Footer */
 .footer {
   display: grid; /* Use grid for layout */
   grid-template-columns: 1fr auto; /* Left column for copyright, right for social media */
@@ -730,9 +711,7 @@ section {
   justify-content: center; /* Center horizontally */
 }
 
-/**************/
-/* Workpagina */
-/**************/
+/*********************************************************** Extra for Work pagina */
 img {
   width: 100%; /* Make images responsive */
 }
